--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <a class="call-button" href="tel:8067815638">Call PoopDood</a>
   <div>
     <a class="social-button" href="https://www.facebook.com/poopdoodlubbock/" target="_blank">Facebook</a>
-    <a class="social-button" href="https://www.instagram.com/yourfakeinsta/" target="_blank">Instagram</a>
+    <a class="social-button" href="https://www.instagram.com/corbinrkey/" target="_blank">Instagram</a>
   </div>
 </header>
 
@@ -234,3 +234,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
