--- a/index.html
+++ b/index.html
@@ -4,154 +4,187 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PoopDood — Your Dog, Our Mess</title>
-<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
+  :root {
+    --primary: #6EDC40;
+    --primary-dark: #4EBB2E;
+    --accent: #ffff66;
+    --text: #333;
+    --bg-light: #ffffff;
+    --bg-gradient: linear-gradient(180deg, #A6E22E 0%, #6EDC40 100%);
+  }
+
   html, body {
     margin: 0;
     padding: 0;
-    font-family: 'Baloo 2', cursive;
-    color: #fff;
+    font-family: 'Inter', sans-serif;
+    color: var(--text);
+    background: #f6f8f5;
     text-align: center;
     overflow-x: hidden;
-    position: relative;
-    animation: bgFade 30s ease-in-out infinite alternate;
     scroll-behavior: smooth;
   }
 
-  @keyframes bgFade {
-    0% { background-color: #A6E22E; }
-    25% { background-color: #8CE63B; }
-    50% { background-color: #6EDC40; }
-    75% { background-color: #57D14D; }
-    100% { background-color: #3FCC55; }
+  header {
+    padding: 60px 20px 40px;
+    background: var(--bg-gradient);
+    color: #fff;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    position: relative;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+  }
+  header h1 {
+    margin: 0;
+    font-size: 3rem;
+    font-family: 'Baloo 2', cursive;
+    text-shadow: 2px 3px 10px rgba(0,0,0,0.2);
+  }
+  header p {
+    font-size: 1.3rem;
+    margin: 10px 0 25px;
+  }
+
+  .btn {
+    background: #fff;
+    color: var(--primary-dark);
+    padding: 14px 28px;
+    border: none;
+    border-radius: 14px;
+    font-size: 1.1rem;
+    cursor: pointer;
+    text-decoration: none;
+    display: inline-block;
+    margin: 8px;
+    font-weight: 600;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    transition: all 0.25s ease;
+  }
+  .btn:hover {
+    transform: translateY(-3px);
+    background: var(--accent);
+    box-shadow: 0 8px 15px rgba(0,0,0,0.15);
+  }
+
+  section {
+    background: var(--bg-light);
+    margin: 40px auto;
+    padding: 40px 30px;
+    width: 90%;
+    max-width: 900px;
+    border-radius: 20px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+    text-align: center;
+  }
+  section h2 {
+    color: var(--primary-dark);
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-family: 'Baloo 2', cursive;
+  }
+  section h2::before { content: "🐾"; }
+
+  .pricing-list p { margin: 5px 0; font-size: 1rem; color: #444; }
+  .pricing-list b { color: var(--primary-dark); }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    align-items: center;
+  }
+  input {
+    padding: 12px 16px;
+    font-size: 1rem;
+    border-radius: 10px;
+    border: 1px solid #ddd;
+    background: #f9f9f9;
+    width: 80%;
+    max-width: 400px;
+    transition: border 0.2s, background 0.2s;
+  }
+  input:focus {
+    outline: none;
+    border-color: var(--primary);
+    background: #fff;
+  }
+
+  button.submit-btn {
+    background: var(--primary);
+    color: #fff;
+    font-size: 1.1rem;
+    padding: 14px 28px;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: all 0.2s;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  }
+  button.submit-btn:hover {
+    background: var(--primary-dark);
+    transform: translateY(-2px);
+  }
+
+  #map {
+    width: 100%;
+    height: 400px;
+    border-radius: 16px;
+    margin-top: 10px;
+  }
+
+  footer {
+    background: var(--primary-dark);
+    color: #fff;
+    padding: 25px 15px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    font-size: 0.95rem;
   }
 
   .dog {
     position: absolute;
     font-size: 40px;
+    opacity: 0.85;
     animation: floatDog linear infinite;
-    z-index: 5;
-    opacity: 0.9;
+    z-index: 3;
   }
   @keyframes floatDog {
     0% { transform: translate(0,0) rotate(0deg); }
-    25% { transform: translate(20px,-20px) rotate(15deg); }
-    50% { transform: translate(-20px,20px) rotate(-15deg); }
-    75% { transform: translate(20px,20px) rotate(10deg); }
-    100% { transform: translate(-20px,-20px) rotate(-10deg); }
+    50% { transform: translate(15px,-15px) rotate(10deg); }
+    100% { transform: translate(0,0) rotate(0deg); }
   }
 
-  header {
-    padding: 40px 20px 20px;
-    z-index: 10;
-    position: relative;
-  }
-  header h1 {
-    margin: 0;
-    font-size: 48px;
-    text-shadow: 2px 2px 8px #FFFFFF55;
-  }
-  header p {
-    margin: 5px 0 20px;
-    font-size: 22px;
-  }
-
-  .btn {
-    background: #FFFFFF;
-    color: #A6E22E;
-    padding: 14px 28px;
-    border: none;
-    border-radius: 12px;
-    font-size: 20px;
-    cursor: pointer;
-    text-decoration: none;
-    display: inline-block;
-    margin: 10px 5px;
-    transition: transform 0.2s, box-shadow 0.2s, background 0.2s, color 0.2s;
-  }
-  .btn:hover {
-    background: #FFFF66;
-    transform: scale(1.07);
-    box-shadow: 0 8px 20px rgba(255,255,255,0.25);
-  }
-
-  section {
-    background: #FFFFFF;
-    margin: 20px auto;
-    padding: 30px 25px;
-    width: 90%;
-    max-width: 800px;
-    border-radius: 16px;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.15);
-    transition: transform 0.3s;
-    color: #A6E22E;
-    position: relative;
-    z-index: 5;
-  }
-  section:hover { transform: translateY(-5px); }
-  section h2 {
-    margin-top:0;
-    color: #A6E22E;
-    font-size: 28px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-  }
-  section h2::before { content: "🐾"; }
-
-  .pricing-list { line-height: 1.8; font-size: 17px; text-align:center; }
-  .pricing-list b { color: #A6E22E; }
-
-  form { display:flex; flex-direction: column; gap:14px; align-items:center; }
-  input, select {
-    padding:12px; font-size:16px; border-radius:8px; border:1px solid #FFFFFF;
-    background:#FFFFFF; color:#A6E22E; width:80%; max-width:400px;
-  }
-  input:focus, select:focus { border-color:#FFFF66; outline:none; }
-
-  button.submit-btn {
-    background:#FFFFFF; color:#A6E22E; font-size:20px; padding:14px;
-    border:none; border-radius:12px; cursor:pointer; transition: all 0.2s;
-  }
-  button.submit-btn:hover {
-    background:#FFFF66; color:#A6E22E; transform:scale(1.05);
-  }
-
-  .map-section { width:90%; max-width:800px; margin:20px auto; padding:0; }
-  #map { width:100%; height:400px; border-radius:12px; overflow:hidden; }
-
-  @media (max-width:600px){
-    header h1 { font-size:34px; }
-    header p { font-size:18px; }
-    .btn { font-size:18px; padding:10px 20px; }
-    .dog { font-size:28px; }
+  @media (max-width: 600px) {
+    header h1 { font-size: 2.3rem; }
+    header p { font-size: 1rem; }
+    .btn { font-size: 1rem; padding: 10px 20px; }
+    .dog { font-size: 30px; }
   }
 </style>
 </head>
 <body>
 
 <!-- Floating Dogs -->
-<div class="dog" style="top:5%; left:5%; animation-duration:12s;">🐶</div>
-<div class="dog" style="top:15%; left:25%; animation-duration:14s;">🐕</div>
-<div class="dog" style="top:25%; left:60%; animation-duration:18s;">🐩</div>
-<div class="dog" style="top:35%; left:75%; animation-duration:22s;">🦮</div>
-<div class="dog" style="top:45%; left:10%; animation-duration:19s;">🐕‍🦺</div>
-<div class="dog" style="top:55%; left:50%; animation-duration:16s;">🐶</div>
-<div class="dog" style="top:65%; left:80%; animation-duration:24s;">🐾</div>
-<div class="dog" style="top:75%; left:30%; animation-duration:21s;">🦴</div>
-<div class="dog" style="top:85%; left:70%; animation-duration:20s;">🐕</div>
+<div class="dog" style="top:5%; left:10%; animation-duration:16s;">🐶</div>
+<div class="dog" style="top:20%; left:70%; animation-duration:18s;">🐕</div>
+<div class="dog" style="top:35%; left:30%; animation-duration:20s;">🐩</div>
+<div class="dog" style="top:60%; left:60%; animation-duration:22s;">🦮</div>
+<div class="dog" style="top:75%; left:15%; animation-duration:24s;">🐕‍🦺</div>
+<div class="dog" style="top:85%; left:80%; animation-duration:26s;">🐾</div>
 
 <header>
   <h1>PoopDood</h1>
-  <p>Your Dog, Our Mess</p>
-  <a class="btn" href="tel:8067815638">📞 Call PoopDood</a>
-  <a class="btn" href="sms:8067815638?body=Hi!%20I%27d%20like%20to%20schedule%20a%20pickup!">💬 Text Us</a>
-  <div>
-    <a class="btn" href="https://www.facebook.com/poopdoodlubbock/" target="_blank">Facebook</a>
-    <a class="btn" href="https://www.instagram.com/corbinrkey/" target="_blank">Instagram</a>
-  </div>
+  <p>Your Dog, Our Mess — Lubbock’s Trusted Pooper Scooper</p>
+  <a class="btn" href="tel:8067815638">📞 Call Us</a>
+  <a class="btn" href="sms:8067815638?body=Hi!%20I%27d%20like%20to%20schedule%20a%20pickup!">💬 Text Us</a><br>
+  <a class="btn" href="https://www.facebook.com/poopdoodlubbock/" target="_blank">Facebook</a>
+  <a class="btn" href="https://www.instagram.com/corbinrkey/" target="_blank">Instagram</a>
 </header>
 
 <section id="services">
@@ -163,14 +196,14 @@
     <p>3 dogs: $65/month</p>
     <p>4 dogs: $70/month</p>
     <p>5+ dogs: $75/month</p>
-
+    <br>
     <p><b>2 times per month</b></p>
     <p>1 dog: $40/month</p>
     <p>2 dogs: $50/month</p>
     <p>3 dogs: $55/month</p>
     <p>4 dogs: $60/month</p>
     <p>5+ dogs: $65/month</p>
-
+    <br>
     <p><b>Twice a week</b></p>
     <p>1 dog: $90/month</p>
     <p>2 dogs: $95/month</p>
@@ -182,8 +215,11 @@
 
 <section id="one-time">
   <h2>Do I do one-time pickups?</h2>
-  <p style="font-size:18px;">Absolutely! If you just need a quick cleanup before a party, event, or special day — we’ve got you covered.</p>
-  <a class="btn" href="sms:8067815638?body=Hi!%20I%27m%20wondering%20if%20you%20do%20one-time%20pickups.">Ask About One-Time Pickups 💩</a>
+  <p style="max-width:700px; margin:auto; font-size:1.05rem; color:#555;">
+    Absolutely! Whether it’s before a backyard party, an event, or just when life’s too busy — PoopDood offers quick, reliable one-time cleanups to make your yard fresh and ready to enjoy.
+  </p>
+  <br>
+  <a class="btn" href="sms:8067815638?body=Hi!%20I%27m%20wondering%20if%20you%20do%20one-time%20pickups.">💩 Ask About One-Time Pickups</a>
 </section>
 
 <section id="appointment">
@@ -198,17 +234,19 @@
   </form>
 </section>
 
-<section id="location" class="map-section">
+<section id="location">
   <h2>Our Service Area</h2>
   <div id="map"></div>
 </section>
 
-<!-- Load standard Google Maps API -->
-<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPD5z7M0VvST2vVVqfEy9piPlwDdAic64&libraries=places"></script>
+<footer>
+  © 2025 PoopDood. Built with 💚 in Lubbock, TX.
+</footer>
 
+<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPD5z7M0VvST2vVVqfEy9piPlwDdAic64"></script>
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  // Appointment form SMS
+  // Appointment form
   const form = document.getElementById('appointmentForm');
   form.addEventListener('submit', (e) => {
     e.preventDefault();
@@ -222,20 +260,25 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 
   // Google Map
-  window.initMap = function() {
+  const initMap = () => {
     const center = { lat: 33.5779, lng: -101.8552 };
     const map = new google.maps.Map(document.getElementById('map'), {
       center: center,
       zoom: 12,
       disableDefaultUI: true,
+      styles: [
+        { featureType: 'all', elementType: 'labels.text.fill', stylers: [{ color: '#4B6043' }] },
+        { featureType: 'poi', stylers: [{ visibility: 'off' }] },
+        { featureType: 'road', elementType: 'geometry', stylers: [{ color: '#CDE4B1' }] },
+        { featureType: 'water', stylers: [{ color: '#A2E4C1' }] }
+      ]
     });
     new google.maps.Marker({ position: center, map: map, title: "PoopDood Service Area" });
   };
 
-  // Wait for Google Maps to load
-  const checkMap = setInterval(() => {
+  const mapCheck = setInterval(() => {
     if (window.google && window.google.maps) {
-      clearInterval(checkMap);
+      clearInterval(mapCheck);
       initMap();
     }
   }, 500);
@@ -244,7 +287,3 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
-
-
-
-
