--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 </section>
 
 <footer>
-  © 2025 PoopDood. Built with 💚 in Lubbock, TX.
+  © 2025 PoopDood. Built with 💚 by Jojo & Corbin in Lubbock, TX.
 </footer>
 
 <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPD5z7M0VvST2vVVqfEy9piPlwDdAic64"></script>
@@ -287,3 +287,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
