--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 <div class="dog" style="top:85%; left:80%; animation-duration:26s;">🐾</div>
 
 <header>
-  <h1>PoopDood</h1>
-  <p>Your Dog, Our Mess — Lubbock’s Trusted Pooper Scooper</p>
+  <h1>Poop Dood</h1>
+  <p>Your Dog, Our Mess. — Lubbock’s Trusted Pooper Scooper</p>
   <a class="btn" href="tel:8067815638">📞 Call Us</a>
   <a class="btn" href="sms:8067815638?body=Hi!%20I%27d%20like%20to%20schedule%20a%20pickup!">💬 Text Us</a><br>
   <a class="btn" href="https://www.facebook.com/poopdoodlubbock/" target="_blank">Facebook</a>
@@ -341,3 +341,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
