--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 
 <style>
   :root {
-    --primary: #6EDC40;
-    --primary-dark: #4EBB2E;
-    --accent: #ffff66;
-    --text: #333;
-    --bg-light: #ffffff;
-    --bg-gradient: linear-gradient(180deg, #A6E22E 0%, #6EDC40 100%);
+    --primary: #A8FF3E;
+    --primary-dark: #6ECF00;
+    --accent: #FFD93D;
+    --text: #1E1E1E;
+    --bg-light: #F9FFF1;
+    --bg-gradient: linear-gradient(135deg, #A8FF3E 0%, #FFD93D 100%);
   }
 
   body.dark {
-    --primary: #8FE86A;
-    --primary-dark: #6EDC40;
-    --accent: #A6E22E;
+    --primary: #C6FF6B;
+    --primary-dark: #A8FF3E;
+    --accent: #FFD93D;
     --text: #f1f1f1;
-    --bg-light: #1e1e1e;
-    --bg-gradient: linear-gradient(180deg, #3a6b24 0%, #274b18 100%);
+    --bg-light: #141414;
+    --bg-gradient: linear-gradient(135deg, #39591B 0%, #2A420E 100%);
     background: #111 !important;
     color: var(--text);
   }
@@ -32,36 +32,94 @@
     padding: 0;
     font-family: 'Inter', sans-serif;
     color: var(--text);
-    background: #f6f8f5;
+    background: var(--bg-light);
     text-align: center;
     overflow-x: hidden;
     scroll-behavior: smooth;
     transition: background 0.4s, color 0.4s;
   }
 
+  /* STAR BACKGROUND (Night Mode) */
+  .stars {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    overflow: hidden;
+    z-index: 1;
+  }
+
+  .star {
+    position: absolute;
+    background: white;
+    border-radius: 50%;
+    opacity: 0.8;
+    animation: twinkle 2s infinite ease-in-out alternate;
+  }
+
+  @keyframes twinkle {
+    0%, 100% { opacity: 0.2; transform: scale(1); }
+    50% { opacity: 1; transform: scale(1.3); }
+  }
+
+  /* SUNNY GLOW (Day Mode) */
+  .sun-glow {
+    position: fixed;
+    top: -150px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 500px;
+    height: 500px;
+    background: radial-gradient(circle, rgba(255,255,150,0.5) 0%, rgba(255,255,200,0.1) 60%, transparent 100%);
+    border-radius: 50%;
+    filter: blur(40px);
+    pointer-events: none;
+    z-index: 1;
+    animation: sunPulse 8s ease-in-out infinite alternate;
+  }
+
+  @keyframes sunPulse {
+    from { transform: translateX(-50%) scale(1); opacity: 0.7; }
+    to { transform: translateX(-50%) scale(1.1); opacity: 1; }
+  }
+
+  /* HEADER */
   header {
-    padding: 60px 20px 40px;
+    padding: 70px 20px 50px;
     background: var(--bg-gradient);
-    color: #fff;
-    border-bottom-left-radius: 40px;
-    border-bottom-right-radius: 40px;
+    color: #1E1E1E;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
     position: relative;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-    transition: background 0.4s;
+    box-shadow: 0 12px 30px rgba(0,0,0,0.15);
+    overflow: hidden;
+    z-index: 2;
   }
 
   header h1 {
     margin: 0;
-    font-size: 3rem;
+    font-size: 3.2rem;
     font-family: 'Baloo 2', cursive;
-    text-shadow: 2px 3px 10px rgba(0,0,0,0.2);
+    text-shadow: 2px 3px 10px rgba(255,255,255,0.3);
+    animation: wagTitle 3s ease-in-out infinite alternate;
+  }
+
+  @keyframes wagTitle {
+    0% { transform: rotate(0deg); }
+    50% { transform: rotate(1.5deg); }
+    100% { transform: rotate(-1.5deg); }
   }
 
   header p {
     font-size: 1.3rem;
-    margin: 10px 0 25px;
+    margin: 15px 0 30px;
+    color: #333;
+    font-weight: 500;
   }
 
+  /* BUTTONS */
   #darkToggle {
     position: fixed;
     top: 20px;
@@ -79,56 +137,67 @@
     transition: all 0.3s ease;
   }
   #darkToggle:hover { transform: rotate(10deg) scale(1.05); }
-  body.dark #darkToggle { background: #333; color: #fff; }
+  body.dark #darkToggle { background: #333; color: var(--accent); }
 
   .btn {
     background: #fff;
     color: var(--primary-dark);
     padding: 14px 28px;
     border: none;
-    border-radius: 14px;
+    border-radius: 18px;
     font-size: 1.1rem;
     cursor: pointer;
     text-decoration: none;
     display: inline-block;
     margin: 8px;
     font-weight: 600;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    box-shadow: 0 6px 15px rgba(0,0,0,0.1);
     transition: all 0.25s ease;
   }
   .btn:hover {
-    transform: translateY(-3px);
+    transform: translateY(-3px) rotate(-2deg);
     background: var(--accent);
-    box-shadow: 0 8px 15px rgba(0,0,0,0.15);
+    box-shadow: 0 8px 18px rgba(0,0,0,0.2);
   }
   body.dark .btn {
     background: #2b2b2b;
     color: var(--accent);
   }
 
+  /* SECTIONS */
   section {
     background: var(--bg-light);
-    margin: 40px auto;
-    padding: 40px 30px;
+    margin: 50px auto;
+    padding: 50px 35px;
     width: 90%;
     max-width: 900px;
-    border-radius: 20px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.05);
-    text-align: center;
+    border-radius: 25px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.08);
     transition: background 0.4s, color 0.4s;
+    z-index: 2;
+    position: relative;
   }
 
   section h2 {
     color: var(--primary-dark);
-    font-size: 1.8rem;
-    margin-bottom: 20px;
+    font-size: 1.9rem;
+    margin-bottom: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
     font-family: 'Baloo 2', cursive;
+    position: relative;
   }
-  section h2::before { content: "🐾"; }
+  section h2::before {
+    content: "🐾";
+    animation: pawBounce 2.5s ease-in-out infinite;
+  }
+
+  @keyframes pawBounce {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-6px); }
+  }
 
   .pricing-list p { margin: 5px 0; font-size: 1rem; color: #444; }
   .pricing-list b { color: var(--primary-dark); }
@@ -150,21 +219,26 @@
     max-width: 400px;
     transition: border 0.2s, background 0.2s;
   }
-  input:focus { outline: none; border-color: var(--primary); background: #fff; }
-  body.dark input { background: #333; border-color: #444; color: #f1f1f1; }
+  input:focus { outline: none; border-color: var(--primary-dark); background: #fff; }
+  body.dark input { background: #333; border-color: #555; color: #f1f1f1; }
 
   button.submit-btn {
     background: var(--primary);
-    color: #fff;
+    color: #1E1E1E;
     font-size: 1.1rem;
     padding: 14px 28px;
     border: none;
     border-radius: 12px;
     cursor: pointer;
     transition: all 0.2s;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    font-weight: 600;
+    box-shadow: 0 4px 14px rgba(0,0,0,0.1);
   }
-  button.submit-btn:hover { background: var(--primary-dark); transform: translateY(-2px); }
+  button.submit-btn:hover {
+    background: var(--primary-dark);
+    transform: translateY(-2px) rotate(1deg);
+    box-shadow: 0 6px 20px rgba(168,255,62,0.3);
+  }
 
   #map {
     width: 100%;
@@ -175,38 +249,60 @@
 
   footer {
     background: var(--primary-dark);
-    color: #fff;
+    color: #1E1E1E;
     padding: 25px 15px;
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
     font-size: 0.95rem;
-    transition: background 0.4s;
+    font-weight: 600;
+    position: relative;
+    z-index: 2;
   }
-  body.dark footer { background: #222; }
+  body.dark footer { background: #222; color: var(--accent); }
 
   .dog {
     position: absolute;
     font-size: 40px;
-    opacity: 0.85;
+    opacity: 0.9;
     animation: floatDog linear infinite;
     z-index: 3;
+    pointer-events: none;
   }
   @keyframes floatDog {
-    0% { transform: translate(0,0) rotate(0deg); }
-    50% { transform: translate(15px,-15px) rotate(10deg); }
-    100% { transform: translate(0,0) rotate(0deg); }
+    0% { transform: translate(0,0) rotate(0deg); opacity: 0.8; }
+    50% { transform: translate(25px,-20px) rotate(10deg); opacity: 1; }
+    100% { transform: translate(0,0) rotate(0deg); opacity: 0.8; }
+  }
+
+  .paw {
+    position: fixed;
+    bottom: -50px;
+    left: calc(5% + 90% * var(--pos));
+    font-size: 2rem;
+    opacity: 0.3;
+    animation: pawDrift 12s linear infinite;
+    color: var(--primary-dark);
+  }
+  @keyframes pawDrift {
+    0% { transform: translateY(0) rotate(0deg); opacity: 0; }
+    20% { opacity: 0.4; }
+    100% { transform: translateY(-120vh) rotate(25deg); opacity: 0; }
   }
 
   @media (max-width: 600px) {
-    header h1 { font-size: 2.3rem; }
+    header h1 { font-size: 2.5rem; }
     header p { font-size: 1rem; }
     .btn { font-size: 1rem; padding: 10px 20px; }
-    .dog { font-size: 30px; }
+    .dog { font-size: 32px; }
     #darkToggle { width: 40px; height: 40px; font-size: 1.1rem; }
   }
 </style>
 </head>
 <body>
+
+<!-- Stars and Sunlight -->
+<div class="stars" id="stars"></div>
+<div class="sun-glow" id="sunGlow"></div>
 
 <button id="darkToggle" title="Toggle dark mode">🌙</button>
 
@@ -288,17 +384,40 @@
 document.addEventListener('DOMContentLoaded', () => {
   const toggle = document.getElementById('darkToggle');
   const body = document.body;
+  const starsContainer = document.getElementById('stars');
+  const sunGlow = document.getElementById('sunGlow');
+
+  // Create stars
+  for (let i = 0; i < 100; i++) {
+    const star = document.createElement('div');
+    star.className = 'star';
+    const size = Math.random() * 2 + 1;
+    star.style.width = star.style.height = size + 'px';
+    star.style.top = Math.random() * 100 + '%';
+    star.style.left = Math.random() * 100 + '%';
+    star.style.animationDuration = 1.5 + Math.random() * 2 + 's';
+    starsContainer.appendChild(star);
+  }
+
+  const updateSky = () => {
+    const isDark = body.classList.contains('dark');
+    starsContainer.style.display = isDark ? 'block' : 'none';
+    sunGlow.style.display = isDark ? 'none' : 'block';
+  };
 
   if (localStorage.getItem('theme') === 'dark') {
     body.classList.add('dark');
     toggle.textContent = '☀️';
   }
 
+  updateSky();
+
   toggle.addEventListener('click', () => {
     body.classList.toggle('dark');
     const isDark = body.classList.contains('dark');
     toggle.textContent = isDark ? '☀️' : '🌙';
     localStorage.setItem('theme', isDark ? 'dark' : 'light');
+    updateSky();
   });
 
   const form = document.getElementById('appointmentForm');
@@ -321,10 +440,10 @@ document.addEventListener('DOMContentLoaded', () => {
       zoom: 12,
       disableDefaultUI: true,
       styles: [
-        { featureType: 'all', elementType: 'labels.text.fill', stylers: [{ color: '#4B6043' }] },
+        { featureType: 'all', elementType: 'labels.text.fill', stylers: [{ color: '#3a4f1b' }] },
         { featureType: 'poi', stylers: [{ visibility: 'off' }] },
-        { featureType: 'road', elementType: 'geometry', stylers: [{ color: '#CDE4B1' }] },
-        { featureType: 'water', stylers: [{ color: '#A2E4C1' }] }
+        { featureType: 'road', elementType: 'geometry', stylers: [{ color: '#E6FFB1' }] },
+        { featureType: 'water', stylers: [{ color: '#B0FFD9' }] }
       ]
     });
     new google.maps.Marker({ position: center, map: map, title: "PoopDood Service Area" });
@@ -341,4 +460,6 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
+
 
