--- a/index.html
+++ b/index.html
@@ -51,11 +51,46 @@
   }
 
   header h1 {
-    margin: 0;
-    font-size: 3rem;
-    font-family: 'Baloo 2', cursive;
-    text-shadow: 2px 3px 10px rgba(0,0,0,0.2);
+  margin: 0;
+  font-size: 3rem;
+  font-family: 'Baloo 2', cursive;
+  color: #fff;
+  text-shadow:
+    0 0 10px rgba(255, 255, 255, 0.6),
+    0 0 20px var(--accent),
+    0 0 40px var(--primary-dark),
+    0 0 80px var(--primary-dark);
+  animation: logoGlow 3s ease-in-out infinite alternate;
+}
+
+/* Glow animation */
+@keyframes logoGlow {
+  0% {
+    text-shadow:
+      0 0 8px rgba(255, 255, 255, 0.5),
+      0 0 16px var(--accent),
+      0 0 30px var(--primary-dark);
+    transform: scale(1);
   }
+  100% {
+    text-shadow:
+      0 0 16px rgba(255, 255, 255, 0.9),
+      0 0 32px var(--accent),
+      0 0 60px var(--primary-dark);
+    transform: scale(1.02);
+  }
+}
+
+/* Dark mode version — more vibrant */
+body.dark header h1 {
+  color: var(--accent);
+  text-shadow:
+    0 0 15px var(--accent),
+    0 0 30px var(--primary),
+    0 0 60px var(--primary-dark),
+    0 0 90px var(--primary-dark);
+}
+
 
   header p {
     font-size: 1.3rem;
@@ -118,16 +153,48 @@
     transition: background 0.4s, color 0.4s;
   }
 
-  section h2 {
-    color: var(--primary-dark);
-    font-size: 1.8rem;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    font-family: 'Baloo 2', cursive;
+  /* Match glowing style for section headers */
+section h2 {
+  color: var(--primary-dark);
+  font-size: 1.9rem;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-family: 'Baloo 2', cursive;
+  text-shadow:
+    0 0 6px rgba(255, 255, 255, 0.6),
+    0 0 12px var(--accent),
+    0 0 25px var(--primary-dark);
+  animation: sectionGlow 3s ease-in-out infinite alternate;
+}
+
+/* Section glow animation */
+@keyframes sectionGlow {
+  0% {
+    text-shadow:
+      0 0 4px rgba(255, 255, 255, 0.4),
+      0 0 10px var(--accent),
+      0 0 20px var(--primary-dark);
   }
+  100% {
+    text-shadow:
+      0 0 8px rgba(255, 255, 255, 0.8),
+      0 0 20px var(--accent),
+      0 0 35px var(--primary-dark);
+  }
+}
+
+/* Dark mode version — brighter and more vibrant */
+body.dark section h2 {
+  color: var(--accent);
+  text-shadow:
+    0 0 10px var(--accent),
+    0 0 25px var(--primary),
+    0 0 45px var(--primary-dark);
+}
+
   section h2::before { content: "🐾"; }
 
   .pricing-list p { margin: 5px 0; font-size: 1rem; color: #444; }
