--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ body.dark section h2 {
 <div class="dog" style="top:85%; left:80%; animation-duration:26s;">🐾</div>
 
 <header>
-  <h1>Poop Dood</h1>
+  <h1>POOP DOOD©</h1>
   <p>Your Dog, Our Mess. — Lubbock’s Trusted Pooper Scooper</p>
   <a class="btn" href="tel:8067815638">📞 Call Us</a>
   <a class="btn" href="sms:8067815638?body=Hi!%20I%27d%20like%20to%20schedule%20a%20pickup!">💬 Text Us</a><br>
@@ -408,6 +408,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
