--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ body.dark section h2 {
 </section>
 
 <footer>
-  © 2025 PoopDood. Built with 💚 by Jojo & Corbin in Lubbock, TX.
+  © 2025 POOPDOOD. Built with 💚 by Jojo & Corbin in Lubbock, TX.
 </footer>
 
 <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPD5z7M0VvST2vVVqfEy9piPlwDdAic64"></script>
@@ -408,6 +408,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
