--- a/index.html
+++ b/index.html
@@ -2,104 +2,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="keywords" content="pooper scooper Lubbock, dog waste removal Lubbock TX, yard poop cleanup, pet waste removal near me, poop pickup service">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Multiple title tag variations aren't allowed, but you can use concise title and use h1/h2 for variations -->
-<title>PoopDood — Dog Poop Removal in Lubbock, TX</title>
+  <!-- SEO Keywords (keep short + local) -->
+  <meta name="keywords" content="dog poop removal Lubbock, pooper scooper near me, pet waste cleanup Lubbock TX, yard dog poop pickup, poop cleanup service">
 
-<!-- ---------- LOCAL SEO & META: paste after <title> ---------- -->
+  <!-- Title & Description -->
+  <title>PoopDood — Dog Poop Removal in Lubbock, TX</title>
+  <meta name="description" content="PoopDood — Lubbock’s trusted dog poop removal and pet waste cleanup service. Easy, reliable, and 💩-free yards! Call 806-781-5638.">
 
-<!-- Primary meta & canonical -->
-<link rel="canonical" href="https://YOUR_SITE_URL/">
-<meta name="description" content="PoopDood — Lubbock's reliable dog poop removal & pet waste cleanup. Affordable weekly and one-time yard cleanups. Call 806-781-5638.">
-<meta name="keywords" content="dog poop removal Lubbock, pooper scooper near me, pet waste cleanup Lubbock TX, yard cleaning dog poop, poop pickup Lubbock">
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://poopdood.site/">
 
-<!-- Open Graph (you already have, fine to keep/update) -->
-<meta property="og:site_name" content="PoopDood">
-<meta property="og:locale" content="en_US">
+  <!-- Open Graph (for iMessage, Facebook, Discord, etc.) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://poopdood.site/">
+  <meta property="og:site_name" content="PoopDood">
+  <meta property="og:title" content="PoopDood — Your Dog, Our Mess">
+  <meta property="og:description" content="Lubbock’s trusted pooper scooper! Affordable weekly, twice-monthly, and one-time cleanups.">
+  <meta property="og:image" content="https://poopdood.site/assets/logo.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:locale" content="en_US">
 
+  <!-- Twitter / X Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="PoopDood — Your Dog, Our Mess">
+  <meta name="twitter:description" content="Lubbock’s trusted pooper scooper! Easy, reliable, and 💩-free yards.">
+  <meta name="twitter:image" content="https://poopdood.site/assets/logo.jpg">
 
-<!-- Structured data (LocalBusiness) JSON-LD -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "LocalBusiness",
-  "@id": "http://poopdood.site/",
-  "name": "Poop Dood",
-  "image": "https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/558151618_1250881373722029_7185767476516381859_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=FJKAC20gYcAQ7kNvwGGhi1v&_nc_oc=AdkDgPe2w3iNvRmQchEZqIi9W_KTBg7ZIQzvGgAnbT9EShfTx37wfDYdKyxhnP4siyo&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&_nc_gid=4W2Nu9oYhEcimNen6FGKhQ&oh=00_AfcFXKmWqKLQPe3U_ifdRgKZgIqdnENgLhDuO7qQM19fYA&oe=68EA7078",
-  "url": "https://www.facebook.com/photo.php?fbid=1250881367055363&set=pb.100064005339486.-2207520000&type=3",
-  "telephone": "+1-806-781-5638",
-  "priceRange": "$",
-  "address": {
-    "@type": "PostalAddress",
-    "streetAddress": "2006 la salle ave",
-    "addressLocality": "Lubbock",
-    "addressRegion": "TX",
-    "postalCode": "79407",
-    "addressCountry": "US"
-  },
-  "geo": {
-    "@type": "GeoCoordinates",
-    "latitude": LAT,
-    "longitude": LNG
-  },
-  "openingHoursSpecification": [
-    {
+  <!-- Favicon -->
+  <link rel="icon" href="https://poopdood.site/assets/logo.jpg" type="image/jpeg">
+
+  <!-- Local Business Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "@id": "https://poopdood.site/#business",
+    "name": "PoopDood",
+    "image": "https://poopdood.site/assets/logo.jpg",
+    "url": "https://poopdood.site/",
+    "telephone": "+1-806-781-5638",
+    "priceRange": "$",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "2006 La Salle Ave",
+      "addressLocality": "Lubbock",
+      "addressRegion": "TX",
+      "postalCode": "79407",
+      "addressCountry": "US"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 33.5779,
+      "longitude": -101.8552
+    },
+    "openingHoursSpecification": [{
       "@type": "OpeningHoursSpecification",
-      "dayOfWeek": [
-        "Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"
-      ],
+      "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
       "opens": "10:00",
       "closes": "20:00"
-    }
-  ],
-  "sameAs": [
-    "https://www.facebook.com/poopdoodlubbock/",
-    "https://www.instagram.com/corbinrkey/"
-  ],
-  "description": "PoopDood provides reliable dog poop removal and pet waste cleanup in Lubbock, TX. Weekly, twice-monthly, and one-time cleanups available."
-}
-</script>
-
-<!-- Optional: explicit OG image dimensions -->
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-
-<!-- Schema: service offered (helps Google understand keywords) -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Service",
-  "name": "Dog poop removal",
-  "description": "Residential dog poop removal and yard cleaning in Lubbock, Texas.",
-  "provider": {
-    "@type": "LocalBusiness",
-    "name": "PoopDood"
+    }],
+    "sameAs": [
+      "https://www.facebook.com/poopdoodlubbock/",
+      "https://www.instagram.com/corbinrkey/"
+    ],
+    "description": "PoopDood provides reliable dog poop removal and pet waste cleanup in Lubbock, TX. Weekly, twice-monthly, and one-time cleanups available."
   }
-}
-</script>
+  </script>
 
-<!-- ---------- end head SEO snippet ---------- -->
+  <!-- Services Schema (for Google Local Packs) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "Dog Poop Removal",
+    "provider": {
+      "@type": "LocalBusiness",
+      "name": "PoopDood"
+    },
+    "areaServed": {
+      "@type": "Place",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Lubbock",
+        "addressRegion": "TX",
+        "addressCountry": "US"
+      }
+    },
+    "description": "Residential and commercial dog poop removal in Lubbock, TX. Weekly, biweekly, and one-time yard cleanups available."
+  }
+  </script>
 
-<!-- Favicon for browser tab -->
-<link rel="icon" href="https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/558151618_1250881373722029_7185767476516381859_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=FJKAC20gYcAQ7kNvwGGhi1v&_nc_oc=AdkDgPe2w3iNvRmQchEZqIi9W_KTBg7ZIQzvGgAnbT9EShfTx37wfDYdKyxhnP4siyo&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&_nc_gid=4W2Nu9oYhEcimNen6FGKhQ&oh=00_AfcFXKmWqKLQPe3U_ifdRgKZgIqdnENgLhDuO7qQM19fYA&oe=68EA7078" type="image/jpeg">
+  <!-- FAQ Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Do you offer one-time cleanups?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes — PoopDood offers affordable one-time cleanups for parties, events, or just when life gets too busy."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What areas do you serve?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We serve Lubbock, TX, and nearby neighborhoods. Call or text for ZIP-specific availability."
+        }
+      }
+    ]
+  }
+  </script>
 
-<!-- Open Graph (Facebook, iMessage, Discord) -->
-<meta property="og:title" content="PoopDood — Your Dog, Our Mess">
-<meta property="og:description" content="Lubbock’s trusted pooper scooper! Easy, reliable, and 💩-free yards.">
-<meta property="og:image" content="https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/558151618_1250881373722029_7185767476516381859_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=FJKAC20gYcAQ7kNvwGGhi1v&_nc_oc=AdkDgPe2w3iNvRmQchEZqIi9W_KTBg7ZIQzvGgAnbT9EShfTx37wfDYdKyxhnP4siyo&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&_nc_gid=4W2Nu9oYhEcimNen6FGKhQ&oh=00_AfcFXKmWqKLQPe3U_ifdRgKZgIqdnENgLhDuO7qQM19fYA&oe=68EA7078">
-<meta property="og:url" content="https://www.facebook.com/photo.php?fbid=1250881367055363&set=pb.100064005339486.-2207520000&type=3">
-<meta property="og:type" content="website">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
-<!-- Twitter / X Card -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="PoopDood — Your Dog, Our Mess">
-<meta name="twitter:description" content="Lubbock’s trusted pooper scooper! Easy, reliable, and 💩-free yards.">
-<meta name="twitter:image" content="https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/558151618_1250881373722029_7185767476516381859_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=FJKAC20gYcAQ7kNvwGGhi1v&_nc_oc=AdkDgPe2w3iNvRmQchEZqIi9W_KTBg7ZIQzvGgAnbT9EShfTx37wfDYdKyxhnP4siyo&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&_nc_gid=4W2Nu9oYhEcimNen6FGKhQ&oh=00_AfcFXKmWqKLQPe3U_ifdRgKZgIqdnENgLhDuO7qQM19fYA&oe=68EA7078">
-
-<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
+</head>
 
 <style>
   :root {
@@ -588,6 +616,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
