--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="pooper scooper Lubbock, dog waste removal Lubbock TX, yard poop cleanup, pet waste removal near me, poop pickup service">
-
+<meta name="google-site-verification" content="_4gXi8Ggt_Im71DH4EwMVU_u0z6FnaY5TvmfYopS4SI" />
 <!-- Multiple title tag variations aren't allowed, but you can use concise title and use h1/h2 for variations -->
 <title>PoopDood — Dog Poop Removal in Lubbock, TX</title>
 
@@ -589,6 +589,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
