--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   "name": "Poop Dood",
   "image": "https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/558151618_1250881373722029_7185767476516381859_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=FJKAC20gYcAQ7kNvwGGhi1v&_nc_oc=AdkDgPe2w3iNvRmQchEZqIi9W_KTBg7ZIQzvGgAnbT9EShfTx37wfDYdKyxhnP4siyo&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&_nc_gid=4W2Nu9oYhEcimNen6FGKhQ&oh=00_AfcFXKmWqKLQPe3U_ifdRgKZgIqdnENgLhDuO7qQM19fYA&oe=68EA7078",
   "url": "https://www.facebook.com/photo.php?fbid=1250881367055363&set=pb.100064005339486.-2207520000&type=3",
-  "telephone": "+1-806-781-5638",
+  "telephone": "8067815638",
   "priceRange": "$",
   "address": {
     "@type": "PostalAddress",
@@ -589,6 +589,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
