--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- ---------- LOCAL SEO & META: paste after <title> ---------- -->
 
 <!-- Primary meta & canonical -->
-<link rel="canonical" href="https://YOUR_SITE_URL/">
+<link rel="canonical" href="https://poopdood.site/">
 <meta name="description" content="PoopDood — Lubbock's reliable dog poop removal & pet waste cleanup. Affordable weekly and one-time yard cleanups. Call 806-781-5638.">
 <meta name="keywords" content="dog poop removal Lubbock, pooper scooper near me, pet waste cleanup Lubbock TX, yard cleaning dog poop, poop pickup Lubbock">
 
@@ -588,6 +588,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
