--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ body.dark .logo {
 <section id="appointment">
   <h2>Book an Appointment</h2>
   <form id="appointmentForm">
-    <input type="text" id="name" placeholder="Your Name" required>
+    <input type="text" id="name" placeholder="First and Last Name" required>
     <input type="text" id="address" placeholder="Your Address" required>
     <input type="number" id="dogs" placeholder="Number of Dogs" min="1" required>
     <input type="date" id="date" required>
@@ -581,6 +581,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
