--- a/index.html
+++ b/index.html
@@ -490,14 +490,20 @@ body.dark .logo {
 </section>
 
 <footer>
-    <img 
-  src="https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/558151618_1250881373722029_7185767476516381859_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=FJKAC20gYcAQ7kNvwGGhi1v&_nc_oc=AdkDgPe2w3iNvRmQchEZqIi9W_KTBg7ZIQzvGgAnbT9EShfTx37wfDYdKyxhnP4siyo&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&_nc_gid=4W2Nu9oYhEcimNen6FGKhQ&oh=00_AfcFXKmWqKLQPe3U_ifdRgKZgIqdnENgLhDuO7qQM19fYA&oe=68EA7078"
-  alt="PoopDood Logo"
-  class="footer-logo"
-/>
+  <img 
+    src="https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/558151618_1250881373722029_7185767476516381859_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=FJKAC20gYcAQ7kNvwGGhi1v&_nc_oc=AdkDgPe2w3iNvRmQchEZqIi9W_KTBg7ZIQzvGgAnbT9EShfTx37wfDYdKyxhnP4siyo&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&_nc_gid=4W2Nu9oYhEcimNen6FGKhQ&oh=00_AfcFXKmWqKLQPe3U_ifdRgKZgIqdnENgLhDuO7qQM19fYA&oe=68EA7078"
+    alt="PoopDood Logo"
+    class="footer-logo"
+  />
 
-  © 2025 POOPDOOD. Built with 💚 by Jojo & Corbin in Lubbock, TX.
+  <p>© 2025 POOPDOOD. Built with 💚 by Jojo & Corbin in Lubbock, TX.</p>
+
+  <div class="footer-links">
+    <a class="btn" href="about.html">🐾 About Us</a>
+    <a class="btn" href="faq.html">💩 FAQ</a>
+  </div>
 </footer>
+
 
 <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPD5z7M0VvST2vVVqfEy9piPlwDdAic64"></script>
 <script>
@@ -581,24 +587,3 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
