--- a/faq.html
+++ b/faq.html
@@ -252,7 +252,7 @@ body.dark .footer-links .btn {
 </main>
 
 <footer>
-  <img src="https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/558151618_1250881373722029_7185767476516381859_n.jpg" alt="PoopDood Logo" class="footer-logo">
+  <img src="https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/558151618_1250881373722029_7185767476516381859_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=FJKAC20gYcAQ7kNvwGGhi1v&_nc_oc=AdkDgPe2w3iNvRmQchEZqIi9W_KTBg7ZIQzvGgAnbT9EShfTx37wfDYdKyxhnP4siyo&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&_nc_gid=4W2Nu9oYhEcimNen6FGKhQ&oh=00_AfcFXKmWqKLQPe3U_ifdRgKZgIqdnENgLhDuO7qQM19fYA&oe=68EA7078" alt="PoopDood Logo" class="footer-logo">
   <p>© 2025 POOPDOOD — Lubbock, TX</p>
   <nav>
     <a href="index.html">Home</a> |
@@ -331,3 +331,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
